# wsi-py-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPECS.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: add-module.md  check.md  design-review.md  implement.md  install-github-app.md  refactor.md  release.md  review-pr.md  test.md  update-specs.md  worktree-merge.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-code.yml  main.yml  on-release-main.yml  validate-codecov-config.yml
docs/: agents.md  configuration.md  development.md  index.md  modules.md  pipeline.md
src/wsi_py_ai/: __init__.py
src/wsi_py_ai/agents/: __init__.py  base.py  config.py  deid_agent.py  ingest_agent.py  planner.py  qa_agent.py  recovery_agent.py  registry_agent.py  training_agent.py
src/wsi_py_ai/backends/: __init__.py  base.py  factory.py  gcp.py  local.py  postgres.py
src/wsi_py_ai/cli/: __init__.py  agent_cmd.py  config_cmd.py  dataloader_cmd.py  deid_cmd.py  ingest_cmd.py  pipeline_cmd.py  qa_cmd.py  registry_cmd.py
src/wsi_py_ai/config/: __init__.py  settings.py
src/wsi_py_ai/core/: __init__.py  logging.py  slide.py  types.py
src/wsi_py_ai/dataloader/: __init__.py  loader.py
src/wsi_py_ai/deid/: __init__.py  deidentifier.py
src/wsi_py_ai/ingest/: __init__.py  ingester.py
src/wsi_py_ai/memory/: __init__.py  audit.py
src/wsi_py_ai/orchestration/: __init__.py  flows.py  guardrails.py
src/wsi_py_ai/qa/: __init__.py  runner.py
src/wsi_py_ai/registry/: __init__.py  registry.py
src/wsi_py_ai/tools/: __init__.py  dataloader_tools.py  deid_tools.py  ingest_tools.py  qa_tools.py  registry_tools.py
tests/: test_backends.py  test_config.py  test_types.py
